fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@
 
 .container {
   max-width: 95%;
-  padding: 1.5rem 0;
   margin-inline: auto;
 }
 
